# mysql-benford

./: CMakeLists.txt  LICENSE  README.md  chisq.c  common.c  common.h  max.c  mstar.c
